Working on scripts for setting up master and worker